issue #107: added tests for value objects and fixed spring tests